add manhattan to summary

--- a/Documentation/summary.tex
+++ b/Documentation/summary.tex
@@ -81,6 +81,9 @@ It is possible to select a couple of SNPs including their direction (risk/non-ri
 \caption {Boxplot of PRS of different selections with same size, our selections stem from the pyramid scheme, they deviate significantly from a random selection. }\label{fig:boxplot}
 }\end{figure}
 
+\begin{figure} [!h] \centering{\includegraphics[ trim={0 0 0 0},clip, width=\linewidth]{Manhattan_PRS} 
+\caption {Manhattan plot of our toy data }\label{fig:manhattan}
+}\end{figure}
 
 For the purpose of analyzing the combined predictive power of SNPs the PRS is not a particularly effective metric as it only states the individual predictive power, which may be obfuscated by balancing out effects. Generally, a high PRS indicates that SNP with high predictive power have been found, but it is not necessary that they are balanced and therefore low scores should a priori not indicate a failure of the method. \\
 
