--- a/Documentation/summary.tex
+++ b/Documentation/summary.tex
@@ -175,11 +175,17 @@ On each level, only a part of the individuals is considered, this means, that th
 }
 \end{figure}
 
+
+\section{Evaluation of the methods}
 \begin{figure} [!h] \centering{\includegraphics[ trim={0 0 0 0},clip, width=\linewidth]{histall.eps} 
-\caption {Histogram of multiple  k-folds using the Pyramid scheme and mutiple phenotype shuffling schemes. The grouping scheme is superimposed on top of the k-fold. No overlap is detected, clear trends with the pyramid scheme are visible, while for shuffled phenotypes no order is apparent.   }\label{fig:play}
+\caption {Histogram of multiple k-folds using one out of pyramid scheme, grouping scheme or phenotype shuffling schemes. The grouping scheme is superimposed on top of the k-fold. No overlap is detected, clear trends with the pyramid scheme are visible, while for shuffled phenotypes no order is apparent.   }\label{fig:play}
 }
 \end{figure}
 
+\begin{figure} [!h] \centering{\includegraphics[ trim={0 0 0 0},clip, width=\linewidth]{accuracyplot.eps} 
+\caption {Prediction accuracies of  predicted outcomes in data out of sample data, never included in the data before. The red lines indicates the guessing threshold.   }\label{fig:play}
+}
+\end{figure}
 
 
 \newpage
