add xlabel to boxplot

--- a/Documentation/summary.tex
+++ b/Documentation/summary.tex
@@ -183,7 +183,7 @@ On each level, only a part of the individuals is considered, this means, that th
 \end{figure}
 
 \begin{figure} [!h] \centering{\includegraphics[ trim={0 0 0 0},clip, width=\linewidth]{accuracyplot.eps} 
-\caption {Prediction accuracies of  predicted outcomes in data out of sample data, never included in the data before. The red lines indicates the guessing threshold.   }\label{fig:play}
+\caption {Prediction accuracies of  predicted outcomes in data out of sample data, never included in the data before. The red lines indicates the expected guessing accuracy for this data with a random approach. }\label{fig:play}
 }
 \end{figure}
 
